Fix; use rem for font size, ensure smaller rem on mobile devices

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,11 +69,17 @@ header h1 {
   text-align: center;
   font-family: 'Noto Serif', serif;
   font-weight: 700;
-  font-size: 96px;
+  font-size: 5rem;
   color: white;
   top: 50%;
   transform: translateY(-50%);
   text-shadow: -2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-aspect-ratio: 9/16) {
+  header h1 {
+    font-size: 4rem;
+  }
 }
 
 /*
